--- a/rhyze/en.lproj/MainStoryboard.storyboard
+++ b/rhyze/en.lproj/MainStoryboard.storyboard
@@ -50,6 +50,7 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.20000001788139343" green="0.015686275437474251" blue="0.20000001788139343" alpha="1" colorSpace="deviceRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Rzq-c3-XOa" secondAttribute="trailing" constant="8" id="EdQ-e8-bbd"/>
                             <constraint firstItem="yyC-XM-BvG" firstAttribute="leading" secondItem="ahl-gh-UTB" secondAttribute="leading" type="default" id="EjW-DM-BmL"/>
@@ -58,13 +59,22 @@
                             <constraint firstItem="ahl-gh-UTB" firstAttribute="top" secondItem="3" secondAttribute="top" constant="104" id="gCa-bQ-HDw"/>
                             <constraint firstItem="Rzq-c3-XOa" firstAttribute="top" secondItem="3" secondAttribute="top" constant="5" id="xe1-yD-QzC"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="pVg-2f-9oL" appends="YES" id="3ZX-Ka-kEM"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="CurrentTime" destination="yyC-XM-BvG" id="TbK-u8-Kho"/>
                         <outlet property="currentDate" destination="ahl-gh-UTB" id="WQG-y0-u3u"/>
+                        <outlet property="viewPan" destination="3" id="s8f-eA-ZBN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="pVg-2f-9oL">
+                    <connections>
+                        <action selector="handlePan:" destination="2" id="Fvt-AO-aVL"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="214" y="126"/>
         </scene>
