--- a/rhyze/NewAlarmModalViewController.xib
+++ b/rhyze/NewAlarmModalViewController.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{287, 7}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="663886176"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -92,7 +91,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{93, 470}, {135, 58}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -106,16 +104,16 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="593614746"/>
-						<object class="NSCustomResource" key="IBUIHighlightedImage" id="507833505">
+						<object class="NSCustomResource" key="IBUIHighlightedImage" id="393765465">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">saveOver.png</string>
 						</object>
-						<object class="NSCustomResource" key="IBUINormalImage" id="902905958">
+						<object class="NSCustomResource" key="IBUINormalImage" id="456762200">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">save.png</string>
 						</object>
-						<reference key="IBUIHighlightedBackgroundImage" ref="507833505"/>
-						<reference key="IBUINormalBackgroundImage" ref="902905958"/>
+						<reference key="IBUIHighlightedBackgroundImage" ref="393765465"/>
+						<reference key="IBUINormalBackgroundImage" ref="456762200"/>
 						<reference key="IBUIFontDescription" ref="38668546"/>
 						<reference key="IBUIFont" ref="124755914"/>
 					</object>
@@ -124,7 +122,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-12, 22}, {288, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="402762213"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -134,8 +131,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Create New Alarm</string>
 						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC41ODgyMzUyOTQxIDAuNDcwNTg4MjM1MyAwLjYwNzg0MzEzNzMAA</bytes>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
@@ -156,7 +153,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="741933160"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -240,7 +236,7 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="691489160">
+							<object class="IBNSLayoutConstraint" id="206146014">
 								<reference key="firstItem" ref="663886176"/>
 								<int key="firstAttribute">9</int>
 								<int key="relation">0</int>
@@ -380,7 +376,7 @@
 						<int key="objectID">12</int>
 						<reference key="object" ref="663886176"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="552222011">
+							<object class="IBNSLayoutConstraint" id="1016406589">
 								<reference key="firstItem" ref="663886176"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
@@ -396,7 +392,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="590328816">
+							<object class="IBNSLayoutConstraint" id="540199177">
 								<reference key="firstItem" ref="663886176"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -470,21 +466,6 @@
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">113</int>
-						<reference key="object" ref="175584369"/>
-						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">119</int>
-						<reference key="object" ref="364788772"/>
-						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">125</int>
-						<reference key="object" ref="97770783"/>
-						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">126</int>
 						<reference key="object" ref="104228580"/>
 						<reference key="parent" ref="402762213"/>
@@ -496,22 +477,37 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">149</int>
-						<reference key="object" ref="590328816"/>
+						<reference key="object" ref="540199177"/>
 						<reference key="parent" ref="663886176"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">150</int>
-						<reference key="object" ref="552222011"/>
+						<reference key="object" ref="1016406589"/>
 						<reference key="parent" ref="663886176"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">151</int>
-						<reference key="object" ref="691489160"/>
+						<reference key="object" ref="206146014"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">174</int>
 						<reference key="object" ref="902953669"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">113</int>
+						<reference key="object" ref="175584369"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">125</int>
+						<reference key="object" ref="97770783"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">119</int>
+						<reference key="object" ref="364788772"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -527,7 +523,7 @@
 					<reference ref="97770783"/>
 					<reference ref="786020413"/>
 					<reference ref="364788772"/>
-					<reference ref="691489160"/>
+					<reference ref="206146014"/>
 					<reference ref="902953669"/>
 				</array>
 				<string key="102.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -536,8 +532,8 @@
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="0.0" key="12.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<array class="NSMutableArray" key="12.IBViewMetadataConstraints">
-					<reference ref="590328816"/>
-					<reference ref="552222011"/>
+					<reference ref="540199177"/>
+					<reference ref="1016406589"/>
 				</array>
 				<boolean value="NO" key="12.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="125.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -567,42 +563,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">174</int>
+			<int key="maxID">177</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NewAlarmModalViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="CloseSaveAlarmModal:">UIButton</string>
-						<string key="SaveNewAlarm:">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="CloseSaveAlarmModal:">
-							<string key="name">CloseSaveAlarmModal:</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBActionInfo" key="SaveNewAlarm:">
-							<string key="name">SaveNewAlarm:</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NewAlarmModalViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
